fixed experience section text and spacing - fixed side menu buttons under 1250px w

--- a/src/styling/experience.css
+++ b/src/styling/experience.css
@@ -1,8 +1,9 @@
 /* experience section */
 
 #experience {
-  height: 96vh;
-
+  /* height: 96vh; */
+  height: fit-content;
+  min-height: fit-content;
 }
 
 #experience h2 {
@@ -17,8 +18,6 @@
   font-family: 'Sansita', sans-serif;
   position: relative;
   width: 80%;
-  height: 80%;
-  min-height: 90vh;
 }
 
 #side-menu {
@@ -123,18 +122,20 @@
     align-items: center;
     width: 80%;
     min-width: 300px;
-    height: 40px;
+    height: 12vw;
     position: relative;
   }
 
   #side-menu button {
-    font-size: 2.6vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    font-size: 3vw;
     text-align: left;
     width: 25%;
-    height: 50px;
+    height: 100%;
     border-left: 0.1vw solid transparent;
     border-bottom: 0.2vw dashed #23ddff;
-    padding: 5px;
     margin: 0;
   }
 
